<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <ImageView
            android:id="@+id/contactStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:padding="8dp"
            android:src="@drawable/star" />

        <TextView
            android:id="@+id/contactCompanyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/contactStar"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/contactCompanyAddress1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/contactCompanyName"
            android:layout_toRightOf="@id/contactStar"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/contactCompanyAddress2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/contactCompanyAddress1"
            android:layout_toRightOf="@id/contactStar"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/ScrollView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <fragment
                android:id="@+id/contactMap"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="220dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/contactPhoneLabel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="5dp"
                    android:text="@string/telephon" />

                <TextView
                    android:id="@+id/contactPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/telephon"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/contactFaxLabel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="5dp"
                    android:text="@string/fax" />

                <TextView
                    android:id="@+id/contactFax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/fax"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/contactEmailLabel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="right"
                    android:padding="5dp"
                    android:text="@string/email" />

                <Button
                    android:id="@+id/contactImageEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn"
                   	android:drawableLeft="@drawable/email"
                    android:color="@color/white"
                    android:padding="5dp"
                    android:textColor="@drawable/tab_text_selector"
                    android:text="@string/openEmail" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/contactWWWLabel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="right"
                    android:padding="5dp"
                    android:text="@string/www" />

                <Button
                    android:id="@+id/contactImageWWW"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn"
                    android:drawableLeft="@drawable/web_site"
                    android:color="@color/white"
                    android:padding="5dp"
                    android:textColor="@drawable/tab_text_selector"
                    android:text="@string/openWWW" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>