<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:padding="5dp" >

        <TextView
            android:textStyle="bold"
            android:id="@+id/eventDetailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:paddingLeft="5dp"
            android:paddingRight="37dp"
            android:textColor="@color/blue_dark"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/eventDetailDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/eventDetailTitle"
            android:textColor="@color/black"
            android:paddingLeft="5dp"
            android:textSize="16sp" />
        
    </RelativeLayout>

    <ScrollView
        android:id="@+id/ScrollView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/eventDetailDate" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/eventDetailDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_gravity="center_vertical" />
<!--  
            <ImageView
                android:id="@+id/eventDetailIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/eventDetailDescription"
                android:layout_centerHorizontal="true"
                android:src="@drawable/plus" />
-->
            
             <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/eventDetailDescription"
                android:padding="10dp"
                android:orientation="vertical" >
                
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
         
                android:background="@drawable/layout_border"
                android:padding="10dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/eventDetailBoxLocalityLabel"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:padding="5dp"
                        android:text="@string/locality" />

                    <TextView
                        android:id="@+id/eventDetailBoxLocality"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/eventDetailBoxDateLabel"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:padding="5dp"
                        android:text="@string/date" />

                    <TextView
                        android:id="@+id/eventDetailBoxDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/eventDetailBoxTimeLabel"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:padding="5dp"
                        android:text="@string/time" />

                    <TextView
                        android:id="@+id/eventDetailBoxTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>